# python-worker-temporal

./: .gitignore  README.md  activities.py  local_worker.py  pyproject.toml  run_hardcoded.py  run_worker.py  run_workflow.py  workflows.py
scripts/: check-compatibility.py
