[tool.poetry]
name = "hi"
version = "0.1.0"
description = ""
authors = ["rachfop <prachford@icloud.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
temporalio = "^1.3.0"
flask = {version = "^2.2.3", extras = ["async"]}


[tool.poetry.group.dev.dependencies]
black = "^22.3.0"
isort = "^5.10.1"
mypy = "^0.961"
pytest = "^7.1.2"
pytest-asyncio = "^0.18.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poe.tasks]
format = [{cmd = "black ."}, {cmd = "isort ."}]
lint = [{cmd = "black --check ."}, {cmd = "isort --check-only ."}, {ref = "lint-types" }]
lint-types = "mypy --check-untyped-defs --namespace-packages ."
test = "pytest"
